--- a/css/style.css
+++ b/css/style.css
@@ -213,50 +213,48 @@ section {
 ------------------------------ */
 
 .team-name {
-  font-size: 1.6rem;
-  font-weight: 600;
+  font-size: 1.8rem; /* was 1.5rem */
+  font-weight: 700;  /* even heavier now */
   line-height: 1.4;
   word-break: break-word;
 }
 
 .team-score {
-  font-size: 2rem;
-  font-weight: 700;
+  font-size: 2.4rem; /* was 2rem */
+  font-weight: 800;  /* even heavier */
   color: #fff;
-}
-
-.score-separator {
-  font-size: 1.8rem;
-  color: #bbb;
-  margin: 0.3rem 0;
+  margin: 0.2rem 0; /* slight vertical spacing */
 }
 
 .match-date,
 .match-time {
-  font-size: 1.3rem;
+  font-size: 1.4rem; /* slightly bigger */
   font-weight: 500;
-  color: #ccc;
+  color: #bbb;
   line-height: 1.3;
 }
 
 .divider {
   width: 2px;
-  height: 80%;
-  background-color: #994499; /* Now a visible soft gray */
+  min-height: 80%;
+  background-color: #999;
   opacity: 0.7;
 }
 
 @media (max-width: 576px) {
   .team-name {
-    font-size: 1.4rem;
+    font-size: 1.6rem; /* slightly smaller on small phones */
   }
 
   .team-score {
-    font-size: 1.8rem;
+    font-size: 2.2rem;
   }
 
   .match-date,
   .match-time {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
   }
+}
+.team-score {
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
 }
